force-app/main/default/objects/Milestone1_Task__c/fields/Addtl_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Addtl_Attendees__c</fullName>
    <label>Addtl Attendees</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Courtney Hamilton</fullName>
            </value>
            <value>
                <fullName>Elizabeth Kelly</fullName>
            </value>
            <value>
                <fullName>Jeff Jones</fullName>
            </value>
            <value>
                <fullName>John Nasr</fullName>
            </value>
            <value>
                <fullName>Matt Bedwell</fullName>
            </value>
            <value>
                <fullName>McKenzie Murdoch</fullName>
            </value>
            <value>
                <fullName>Stephanie Loquvam</fullName>
            </value>
            <value>
                <fullName>Stephen Miles</fullName>
            </value>
            <value>
                <fullName>Taylor Griffin</fullName>
            </value>
            <value>
                <fullName>William Stern</fullName>
            </value>
            <value>
                <fullName>Jennifer Baer</fullName>
            </value>
            <value>
                <fullName>Teri Adam</fullName>
            </value>
            <value>
                <fullName>Christina Woodard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>