force-app/main/default/objects/Milestone1_Task__c/fields/Assessed_Executive__c.field-meta.xml
<CustomField>
    <fullName>Assessed_Executive__c</fullName>
    <description>Project_Milestone__r.Assessed_Executive__r.FirstName + &quot; &quot; + Project_Milestone__r.Assessed_Executive__r.LastName</description>
    <formula>Project_Milestone__r.Assessed_Executive__r.FirstName + &quot; &quot; + Project_Milestone__r.Assessed_Executive__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessed Executive</label>
    <type>Text</type>
</CustomField>