force-app/main/default/objects/Milestone1_Task__c/fields/Assessment_Interview_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Interview_Scheduled_Date__c</fullName>
    <formula>Predecessor_Task__r.Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Interview Scheduled Date</label>
    <type>Date</type>
</CustomField>