force-app/main/default/objects/Milestone1_Task__c/fields/Batched_Reference__c.field-meta.xml
<CustomField>
    <fullName>Batched_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to denote multiple references</description>
    <inlineHelpText>If checked, the executive is giving a reference for more than one participant</inlineHelpText>
    <label>Batched Reference</label>
    <type>Checkbox</type>
</CustomField>