force-app/main/default/objects/Milestone1_Task__c/fields/Board_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Board_Presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Presentation</label>
    <type>Checkbox</type>
</CustomField>