force-app/main/default/objects/Milestone1_Task__c/fields/Calendar_Date__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Date__c</fullName>
    <formula>CASE( RecordType.Name, 
&quot;Assessment Feedback Session&quot;,  Scheduled_Date__c ,
&quot;Assessment Interview&quot;,  Scheduled_Date__c ,
&quot;Basic Task&quot;,  Scheduled_Date__c ,
&quot;Board Feedback/Follow-Up&quot;,  Scheduled_Date__c ,
&quot;Board Interview&quot;,  Scheduled_Date__c ,
&quot;Board Presentation&quot;,  Scheduled_Date__c ,
&quot;Coaching Session&quot;,  Scheduled_Date__c ,
&quot;HR Check-in&quot;,  Scheduled_Date__c ,
&quot;Highlight &amp; Summarize&quot;,  Due_Date__c  ,
&quot;Primary Manager Debrief&quot;,  Scheduled_Date__c ,
&quot;Reference Call&quot;,  Scheduled_Date__c ,
&quot;Report - 1st Draft&quot;,  Due_Date__c ,
&quot;Report - 1st Review&quot;,  Due_Date__c ,
&quot;Report - 2nd Draft&quot;,  Due_Date__c ,
&quot;Report - Final Review&quot;,  Scheduled_Date__c ,
&quot;Secondary Manager Debrief&quot;,  Scheduled_Date__c ,
&quot;Stakeholder Alignment&quot;,  Scheduled_Date__c ,
&quot;Stakeholder Debrief&quot;,  Scheduled_Date__c ,
&quot;Team Effectiveness Interview&quot;,  Scheduled_Date__c ,
&quot;Team Offsite&quot;,  Scheduled_Date__c ,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Date</label>
    <type>Date</type>
</CustomField>