force-app/main/default/objects/Milestone1_Task__c/fields/Category_Link__c.field-meta.xml
<CustomField>
    <fullName>Category_Link__c</fullName>
    <description>Link back to parent category</description>
    <formula>HYPERLINK( Project_Milestone__r.TMG_Category__c ,  Project_Milestone__r.TMG_Category__r.Name ,&apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Link</label>
    <type>Text</type>
</CustomField>