force-app/main/default/objects/Milestone1_Task__c/fields/Conga_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_ID__c</fullName>
    <formula>CASE( First_Chair_User__c , &quot;005F0000005tXxH&quot;, &quot;a0I3k00000cbci5&quot;, &quot;0052A000009LNco&quot;, &quot;a0I3k00000cbciA&quot;,&quot;a0I2A00000bf3Ez&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Template ID</label>
    <type>Text</type>
</CustomField>