force-app/main/default/objects/Milestone1_Task__c/fields/Critical_Reference__c.field-meta.xml
<CustomField>
    <fullName>Critical_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>References considered to be critical to report writing</description>
    <label>Critical Reference</label>
    <type>Checkbox</type>
</CustomField>