force-app/main/default/objects/Milestone1_Task__c/fields/Date_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Reviewed__c</fullName>
    <description>Date report review was completed</description>
    <inlineHelpText>Date report review was completed</inlineHelpText>
    <label>Date Reviewed</label>
    <type>Date</type>
</CustomField>