force-app/main/default/objects/Milestone1_Task__c/fields/Delivered_On__c.field-meta.xml
<CustomField>
    <fullName>Delivered_On__c</fullName>
    <description>Date report is delivered to client</description>
    <inlineHelpText>Date reports is delivered to client</inlineHelpText>
    <label>Delivered On</label>
    <type>Date</type>
</CustomField>