force-app/main/default/objects/Milestone1_Task__c/fields/Due_Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Due Date Changed?</label>
    <type>Checkbox</type>
</CustomField>