force-app/main/default/objects/Milestone1_Task__c/fields/Due_Date_to_Complete_References__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_to_Complete_References__c</fullName>
    <inlineHelpText>Date</inlineHelpText>
    <label>Due Date to Complete References</label>
    <type>Date</type>
</CustomField>