force-app/main/default/objects/Milestone1_Task__c/fields/DueDateCheck__c.field-meta.xml
<CustomField>
    <fullName>DueDateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created by Shobhit Pant (Appirio JDC) for Case C-00211515.</description>
    <label>DueDateCheck</label>
    <type>Checkbox</type>
</CustomField>