force-app/main/default/objects/Milestone1_Task__c/fields/Estimated_Hours2__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours2__c</fullName>
    <formula>CASE( RecordType.Name, 
&quot;Assessment Feedback Session&quot;, 5 , 
&quot;Assessment Interview&quot;, 6.5 , 
&quot;Basic Task&quot;, 0.5 , 
&quot;Board Feedback/Follow-Up&quot;, 1 , 
&quot;Board Interview&quot;, 1 ,
&quot;Board Presentation&quot;, 8 , 
&quot;Coaching Session&quot;, 1.5 , 
&quot;HR Check-in&quot;, 0.5 , 
&quot;Highlight &amp; Summarize&quot;, 6 , 
&quot;Primary Manager Debrief&quot;, 1 , 
&quot;Reference Call&quot;, 0.5 , 
&quot;Report - 1st Draft&quot;, 4 , 
&quot;Report - 1st Review&quot;, 2 , 
&quot;Report - 2nd Draft&quot;, 4 , 
&quot;Report - Final Review&quot;, 2 , 
&quot;Secondary Manager Debrief&quot;, 1 , 
&quot;Stakeholder Alignment&quot;, 1 , 
&quot;Stakeholder Debrief&quot;, 1 , 
&quot;Team Effectiveness Interview&quot;, 1 , 
&quot;Team Offsite&quot;, 8 , 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>