force-app/main/default/objects/Milestone1_Task__c/fields/Executive_Title__c.field-meta.xml
<CustomField>
    <fullName>Executive_Title__c</fullName>
    <formula>Project_Milestone__r.Assessed_Executive__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Title</label>
    <type>Text</type>
</CustomField>