force-app/main/default/objects/Milestone1_Task__c/fields/Final_Report__c.field-meta.xml
<CustomField>
    <fullName>Final_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Final version of report</description>
    <inlineHelpText>Check if this is the final version of the report.</inlineHelpText>
    <label>Final Report</label>
    <type>Checkbox</type>
</CustomField>