force-app/main/default/objects/Milestone1_Task__c/fields/First_Chair__c.field-meta.xml
<CustomField>
    <fullName>First_Chair__c</fullName>
    <label>First Chair (picklist)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matt Bedwell</fullName>
            </value>
            <value>
                <fullName>Alison Byczek</fullName>
            </value>
            <value>
                <fullName>Taylor Griffin</fullName>
            </value>
            <value>
                <fullName>Courtney Hamilton</fullName>
            </value>
            <value>
                <fullName>Jeff Jones</fullName>
            </value>
            <value>
                <fullName>Stephen Miles</fullName>
            </value>
            <value>
                <fullName>John Nasr</fullName>
            </value>
            <value>
                <fullName>Adam Wilkes</fullName>
            </value>
            <value>
                <fullName>External Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>