force-app/main/default/objects/Milestone1_Task__c/fields/First_Chair_Nickname__c.field-meta.xml
<CustomField>
    <fullName>First_Chair_Nickname__c</fullName>
    <formula>IF (First_Chair_User__c =&quot;005F0000002tkLf&quot;,&quot;Taylor&quot;, 
IF (First_Chair_User__c =&quot;005F0000003iIek&quot;,&quot;Matt&quot;, 
IF (First_Chair_User__c =&quot;005F0000002tkLs&quot;,&quot;Stephen&quot;, 
IF (First_Chair_User__c =&quot;005F0000002tkLh&quot;,&quot;Courtney&quot;, 
IF (First_Chair_User__c =&quot;0052A0000095Be9&quot;,&quot;Billy&quot;, 
IF (First_Chair_User__c =&quot;0052A000008OIQ0&quot;,&quot;Christina&quot;, 
IF (First_Chair_User__c =&quot;005F0000002tkLk&quot;,&quot;Jeff&quot;,
IF (First_Chair_User__c =&quot;005F0000005tXxH&quot;,&quot;John&quot;,
IF (First_Chair_User__c =&quot;0052A000007vFcE&quot;,&quot;Stephanie&quot;,
IF (First_Chair_User__c =&quot;0052A0000095dKv&quot;,&quot;Liz&quot;,&quot;&quot;))))))))))</formula>
    <label>First Chair Nickname</label>
    <type>Text</type>
</CustomField>