force-app/main/default/objects/Milestone1_Task__c/fields/FirstChairID__c.field-meta.xml
<CustomField>
    <fullName>FirstChairID__c</fullName>
    <formula>First_Chair_User__r.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FirstChairID</label>
    <type>Text</type>
</CustomField>