force-app/main/default/objects/Milestone1_Task__c/fields/IS_Historical__c.field-meta.xml
<CustomField>
    <fullName>IS_Historical__c</fullName>
    <formula>IF(Scheduled_Date__c &lt; DATE (2018, 1, 1), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS Historical</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>