force-app/main/default/objects/Milestone1_Task__c/fields/Last_Coaching_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Coaching_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify the last touch point in a coaching engagement. When scehduled this will trigger an alert to the operations specialist and project leads to initiate renewal discussions</description>
    <inlineHelpText>Identifies the last contractual touch point for an engagement</inlineHelpText>
    <label>Last Coaching Session</label>
    <type>Checkbox</type>
</CustomField>