force-app/main/default/objects/Milestone1_Task__c/fields/Last_Scheduled_Ref_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Scheduled_Ref_Call__c</fullName>
    <label>Last Scheduled Ref Call</label>
    <type>Date</type>
</CustomField>