force-app/main/default/objects/Milestone1_Task__c/fields/Num_of_References__c.field-meta.xml
<CustomField>
    <fullName>Num_of_References__c</fullName>
    <label># of References</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>