force-app/main/default/objects/Milestone1_Task__c/fields/Offsite_BOD_INT_Name__c.field-meta.xml
<CustomField>
    <fullName>Offsite_BOD_INT_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offsite/BOD INT Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TMG Tasks (Offsite/BOD INT Name)</relationshipLabel>
    <relationshipName>TMG_Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>