force-app/main/default/objects/Milestone1_Task__c/fields/Predecessor_Task_Import_Id__c.field-meta.xml
<CustomField>
    <fullName>Predecessor_Task_Import_Id__c</fullName>
    <label>Predecessor_Task_Import_Id__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>