force-app/main/default/objects/Milestone1_Task__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>This is the priority of the task. 0,1,2,3 or 4.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <color>#000000</color>
                <label>Low</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#FF0000</color>
                <label>High</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>