force-app/main/default/objects/Milestone1_Task__c/fields/Project_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Project_Milestone__c</fullName>
    <inlineHelpText>The milestone that this task is assigned to.</inlineHelpText>
    <label>Deliverable</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Milestone1_Milestone__c.Complete__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Milestone1_Milestone__c</referenceTo>
    <relationshipName>Project_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>