force-app/main/default/objects/Milestone1_Task__c/fields/ProjectRecordType__c.field-meta.xml
<CustomField>
    <fullName>ProjectRecordType__c</fullName>
    <formula>Project_Milestone__r.Project__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectRecordType</label>
    <type>Text</type>
</CustomField>