force-app/main/default/objects/Milestone1_Task__c/fields/Received_on__c.field-meta.xml
<CustomField>
    <fullName>Received_on__c</fullName>
    <description>Date materials were received</description>
    <inlineHelpText>Date materials were received</inlineHelpText>
    <label>Received on</label>
    <type>Date</type>
</CustomField>