force-app/main/default/objects/Milestone1_Task__c/fields/Reference_Last_Name_First__c.field-meta.xml
<CustomField>
    <fullName>Reference_Last_Name_First__c</fullName>
    <formula>(Reference_Name_LU__r.LastName &amp;&quot; &quot;&amp; Reference_Name_LU__r.FirstName)</formula>
    <label>Reference Last Name First</label>
    <type>Text</type>
</CustomField>