force-app/main/default/objects/Milestone1_Task__c/fields/Reference_Name_LU__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name_LU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reference Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TMG Tasks (Reference For)</relationshipLabel>
    <relationshipName>TMG_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>