force-app/main/default/objects/Milestone1_Task__c/fields/Reference_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Reference_Relationship__c</fullName>
    <label>Reference Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Manager</fullName>
            </value>
            <value>
                <fullName>Secondary Manager</fullName>
            </value>
            <value>
                <fullName>Secondary Manager / Senior Executive</fullName>
            </value>
            <value>
                <fullName>Peer</fullName>
            </value>
            <value>
                <fullName>Peer / Horizontal Stakeholder</fullName>
            </value>
            <value>
                <fullName>Direct Report</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>