force-app/main/default/objects/Milestone1_Task__c/fields/Reference_Relationship_Conga__c.field-meta.xml
<CustomField>
    <fullName>Reference_Relationship_Conga__c</fullName>
    <formula>IF(Text(Reference_Relationship__c)=&quot;Primary Manager&quot;,&quot;MANP&quot;,
  IF(Text(Reference_Relationship__c)=&quot;Secondary Manager&quot;,&quot;MANS&quot;,
    IF(Text(Reference_Relationship__c)=&quot;Secondary Manager / Senior Executive&quot;,&quot;MANS&quot;,
      IF(Text(Reference_Relationship__c)=&quot;Peer&quot;,&quot;PEER&quot;,
        IF(Text(Reference_Relationship__c)=&quot;Peer / Horizontal Stakeholder&quot;,&quot;PEER&quot;,
          IF(Text(Reference_Relationship__c)=&quot;Direct Report&quot;,&quot;SUB&quot;,
            IF(Text(Reference_Relationship__c)=&quot;Board Member&quot;,&quot;DIR&quot;,
              IF(Text(Reference_Relationship__c)=&quot;External&quot;,&quot;ZEXT&quot;,&quot; &quot;))))))))</formula>
    <label>Reference Relationship Conga</label>
    <type>Text</type>
</CustomField>