force-app/main/default/objects/Milestone1_Task__c/fields/Reference_Scheduling_Status__c.field-meta.xml
<CustomField>
    <fullName>Reference_Scheduling_Status__c</fullName>
    <label>Reference Scheduling Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>