force-app/main/default/objects/Milestone1_Task__c/fields/Reference_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Reference_Sort_Order__c</fullName>
    <formula>CASE(TEXT(Reference_Relationship__c), 
&quot;Board Member&quot;, 1,
&quot;Primary Manager&quot;, 2,
&quot;Secondary Manager&quot;, 3,
&quot;Peer&quot;, 4,
&quot;Direct Report&quot;, 5, 
&quot;Skip-Level&quot;, 6,
&quot;External&quot;, 7,
99)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>