force-app/main/default/objects/Milestone1_Task__c/fields/Reference_Title__c.field-meta.xml
<CustomField>
    <fullName>Reference_Title__c</fullName>
    <label>Title</label>
    <length>254</length>
    <type>Text</type>
</CustomField>