force-app/main/default/objects/Milestone1_Task__c/fields/Reference_Title_From_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reference_Title_From_Contact__c</fullName>
    <formula>Reference_Name_LU__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>