force-app/main/default/objects/Milestone1_Task__c/fields/References_Received__c.field-meta.xml
<CustomField>
    <fullName>References_Received__c</fullName>
    <inlineHelpText>Date</inlineHelpText>
    <label>References Received</label>
    <type>Date</type>
</CustomField>