force-app/main/default/objects/Milestone1_Task__c/fields/Report_Drafter__c.field-meta.xml
<CustomField>
    <fullName>Report_Drafter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Drafter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value>Miles Group</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>