force-app/main/default/objects/Milestone1_Task__c/fields/Report_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Report_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member of the client services team responsible for reviewing the report.</description>
    <inlineHelpText>Member of the client services team responsible for reviewing the report.</inlineHelpText>
    <label>Report Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks3</relationshipName>
    <type>Lookup</type>
</CustomField>