force-app/main/default/objects/Milestone1_Task__c/fields/Second_Chair__c.field-meta.xml
<CustomField>
    <fullName>Second_Chair__c</fullName>
    <label>Second Chair</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matt Bedwell</fullName>
            </value>
            <value>
                <fullName>Alison Byczek</fullName>
            </value>
            <value>
                <fullName>Taylor Griffin</fullName>
            </value>
            <value>
                <fullName>Courtney Hamilton</fullName>
            </value>
            <value>
                <fullName>Jeff Jones</fullName>
            </value>
            <value>
                <fullName>John Nasr</fullName>
            </value>
            <value>
                <fullName>Adam Wilkes</fullName>
            </value>
            <value>
                <fullName>External Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>